--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
                     <div class="slider">  
                 
                     <ul class="js__slider__images slider__images">
-                        <li class="slider__images-item"><img class="slider__images-image" src="assets/images/car1.jpg" /></li>
-                        <li class="slider__images-item"><img class="slider__images-image" src="assets/images/car2.jpg" /></li>
-                        <li class="slider__images-item"><img class="slider__images-image" src="assets/images/car3.jpg" /></li>
+                        <li class="slider__images-item"><img class="slider__images-image" src="assets/images/car1.png" /></li>
+                        <li class="slider__images-item"><img class="slider__images-image" src="assets/images/car2.png" /></li>
+                        <li class="slider__images-item"><img class="slider__images-image" src="assets/images/car3.png" /></li>
                         <!-- <li class="slider__images-item"><img class="slider__images-image" src="https://unsplash.it/800/450?image=1026" /></li>
                         <li class="slider__images-item"><img class="slider__images-image" src="https://unsplash.it/800/450?image=741" /></li> -->
                     </ul>
